2006-01-26  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* data/glade/output-window.glade:
	  Removed.

	* gaupol:
	  Fixed profiling bug.

	* lib/gaupol/gtk/output.py:
	  Switched from Glade to manual GUI construction for faster start-up
	  time.

2006-01-26  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* lib/gaupol/base/files/determiner.py:
	* lib/gaupol/base/files/microdvd.py:
	* lib/gaupol/base/files/mpl2.py:
	* lib/gaupol/base/files/subrip.py:
	* lib/gaupol/base/files/subviewer2.py:
	  Added testing.
	  (*.write): Make copies of shows, hides and texts if they're to be
	  altered.

	* lib/gaupol/test/__init__.py:
	  (Test.get_micro_dvd_path):  New method.
	  (Test.get_subrip_path): New method.

2006-01-26  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* lib/gaupol/gtk/delegates/help.py:
	  (HelpDelegate.on_check_latest_version_activated): Raised timeout
	  argument to 15 seconds.

2006-01-26  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* lib/gaupol/base/clipboard.py:
	* lib/gaupol/base/model.py:
	* lib/gaupol/base/text/parser.py:
	* lib/gaupol/base/timing/calc.py:
	* lib/gaupol/base/util/encodinglib.py:
	* lib/gaupol/base/util/langlib.py:
	* lib/gaupol/base/util/listlib.py:
	* lib/gaupol/gtk/cellrend/integer.py:
	* lib/gaupol/gtk/cellrend/multiline.py:
	* lib/gaupol/gtk/cellrend/time.py:
	* lib/gaupol/gtk/dialogs/about.py:
	* lib/gaupol/gtk/entries/integer.py:
	* lib/gaupol/gtk/entries/time.py:
	* lib/gaupol/gtk/output.py:
	* lib/gaupol/gtk/util/config.py:
	* lib/gaupol/gtk/util/gtklib.py:
	  Cosmetic changes to testing.

	* lib/gaupol/base/util/wwwlib.py:
	* lib/gaupol/gtk/view.py:
	  Added testing.

	* lib/gaupol/test/__init__.py:
	  (Test.destroy): New method.
	  (Test.run): Call destroy() when finished.

2006-01-25  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* gaupol:
	  Cosmetic changes.

	* lib/gaupol/base/clipboard.py:
	* lib/gaupol/base/model.py:
	* lib/gaupol/base/text/parser.py:
	* lib/gaupol/base/timing/calc.py:
	* lib/gaupol/base/util/encodinglib.py:
	* lib/gaupol/base/util/langlib.py: