@@ -1,5 +1,10 @@
 2006-01-26  Osmo Salomaa  <otsaloma@cc.hut.fi>
 
+	* lib/gaupol/test/__init__.py:
+	  (timefunction, timemethod): New decorators.
+
+2006-01-26  Osmo Salomaa  <otsaloma@cc.hut.fi>
+
 	* data/glade/output-window.glade:
 	  Removed.
 
